@@ -4,9 +4,9 @@ use Test::More no_plan;
 BEGIN { use_ok('WWW::Search') };
 BEGIN { use_ok('WWW::Search::Test') };
 BEGIN { use_ok('WWW::Search::Yahoo') };
-BEGIN { use_ok('WWW::Search::Yahoo::China') };
+BEGIN { use_ok('WWW::Search::Yahoo::DE') };
 
-&my_engine('Yahoo::China');
+&my_engine('Yahoo::DE');
 my $iDebug;
 my $iDump = 0;
 
@@ -14,24 +14,21 @@ my $iDump = 0;
 # goto MULTI_TEST;
 
 # This test returns no results (but we should not get an HTTP error):
-diag("Sending 0-page query to cn.yahoo.com...");
+diag("Sending 0-page query to de.yahoo.com...");
 $iDebug = 0;
 $iDump = 0;
 &my_test('normal', $WWW::Search::Test::bogus_query, 0, 0, $iDebug, $iDump);
+# goto MULTI_TEST;
 TEST_NOW:
 $iDebug = 0;
 $iDump = 0;
 # This query returns 1 page of results:
-diag("Sending 1-page query to cn.yahoo.com...");
-&my_test('normal', "\xCB\xBD\xD3"."\xEF\xB4\xAB\xC7\xE9", 1, 99, $iDebug, $iDump);
-TODO:
-  {
-  local $TODO = q{I need a Chinese reader to implement the result-count regex};
-  cmp_ok(1, '<=', $WWW::Search::Test::oSearch->approximate_result_count,
-         qq{lower-bound approximate_result_count});
-  cmp_ok($WWW::Search::Test::oSearch->approximate_result_count, '<=', 99,
-         qq{upper-bound approximate_result_count});
-  } # end of TODO block
+diag("Sending 1-page query to de.yahoo.com...");
+&my_test('normal', 'wiz'.'radry', 1, 99, $iDebug, $iDump);
+cmp_ok(1, '<=', $WWW::Search::Test::oSearch->approximate_result_count,
+       qq{lower-bound approximate_result_count});
+cmp_ok($WWW::Search::Test::oSearch->approximate_result_count, '<=', 99,
+       qq{upper-bound approximate_result_count});
 my @ao = $WWW::Search::Test::oSearch->results();
 cmp_ok(0, '<', scalar(@ao), 'got any results');
 foreach my $oResult (@ao)
@@ -44,18 +41,15 @@ foreach my $oResult (@ao)
          'result description is not empty');
   } # foreach
 # goto ALL_DONE;
+
 MULTI_TEST:
-diag("Sending multi-page query to cn.yahoo.com...");
+diag("Sending multi-page query to de.yahoo.com...");
 $iDebug = 0;
 $iDump = 0;
 # This query returns MANY pages of results:
-&my_test('normal', "\xCB\xBD", 21, undef, $iDebug, $iDump);
-TODO:
-  {
-  local $TODO = q{I need a Chinese reader to implement the result-count regex};
-  cmp_ok(21, '<=', $WWW::Search::Test::oSearch->approximate_result_count,
-         qq{lower-bound approximate_result_count});
-  } # end of TODO block
+&my_test('normal', "Thurn", 101, undef, $iDebug, $iDump);
+cmp_ok(101, '<=', $WWW::Search::Test::oSearch->approximate_result_count,
+       qq{lower-bound approximate_result_count});
 
 ALL_DONE:
 exit 0;
